# EigenDemo

./: .gitignore  1_Installation.md  1_Intro_Installation.md  2_Matrix_Array_Vector_Class.md  3_Matrix_Operations.md  4_Advanced_Eigen_Operations.md  5_Dense_Linear_Problems_And_Decompositions.md  6_Sparse_Matrices.md  7_Geometry_Transformation.md  8_Differentiation.md  9_Numerical_Optimization .md  9_Numerical_Optimization.md  Advanced_Matrix_Operations.md  CMakeLists.txt  Dense_Linear_Problems_And_Decompositions.md  Matrix_Array_Vector_Class.md  Matrix_Operations.md  Non_Linear_Solvers.md  OLD_README.md  README.md  script
src/: angle_axis_rodrigues.cpp  auto_diff.cpp  calculate_range_of_matrix_column_space.cpp  check_matrixsimilarity.cpp  compute_basis_of_nullspace.cpp  eigen_functor.cpp  eigen_value_eigen_vector.cpp  euler_angle.cpp  geometry_transformation.cpp  glm.cpp  gram_schmidt_orthogonalization.cpp  levenberg_marquardt.cpp  main.cpp  main.cpp.orig  matrix_array_vector.cpp  matrix_broadcasting.cpp  matrix_condition.cpp  matrix_decomposition.cpp  matrix_rank.cpp  memory_mapping.cpp  non_linear_least_squares.cpp  non_linear_optimiser.cpp  nonlinear_least_squares.cpp  null_space_kernel.cpp  null_space_kernel_rank.cpp  numerical_diff.cpp  numerical_methods.cpp  quaternion.cpp  rotation_matrices.cpp  running script  singular_value_decomposition.cpp  solving_system_of_linear_equations.cpp  sparse_matrices.cpp  task.cpp  unaryExpr.cpp
src/sandbox/: CMakeLists.txt
src/sandbox/src/: lm.cpp  lm1.cpp  lm2.cpp  numerical_diff.cpp
